--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "build": "webpack --config webpack.prod.js"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.7",
+    "apollo-link-rest": "^0.9.0-rc.1",
+    "graphql": "^16.2.0",
+    "graphql-anywhere": "^4.2.7",
+    "graphql-tag": "^2.12.6",
+    "qs": "^6.10.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
